--- a/templates/client_landing.jade
+++ b/templates/client_landing.jade
@@ -5,7 +5,6 @@ include header
 h3 Welcome to the setup page of:
     h3 !{my_addr}
 
-
 .main-content
 
 form#config(name="config", method="POST", action="/conf", enctype="multipart/form-data")
@@ -14,7 +13,7 @@ form#config(name="config", method="POST", action="/conf", enctype="multipart/for
     input#name(type="text", value='', placeholder='thing name...', name="name")
 
     p Enter JobServer's Address:
-    input#jobserver(type="text", value='', placeholder='http://127.0.0.1:5000', name="jobserver")
+    input#jobserver(type="text", value='http://127.0.0.1:5000', placeholder='http://127.0.0.1:5000', name="jobserver")
 
     br
 
