--- a/templates/server_home.jade
+++ b/templates/server_home.jade
@@ -1,19 +1,23 @@
 
 include header.jade
 
-h2 This server's address is:
-h3 !{server_addr}
+h3 This server's address is:
+h4 !{server_addr}
 
 br
-h2 Your address is:
-h3 !{your_addr}
+
+h3 Your address is:
+h4 !{your_addr}
 
 br
 
 body
     form(action="octo" method='post')
         input(type='submit', value="...Visit Octoprint web controls...")
-        p
+
+p
+
+body
     form(action="retry" method='post')
         input(type='submit', value="...Refresh Octoprint serial device list...")
 
